// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EnginesEdition operations saga saveEngine with failure 1`] = `
Array [
  Object {
    "done": false,
    "value": Object {
      "@@redux-saga/IO": true,
      "PUT": Object {
        "action": Object {
          "type": "PENDING_REQUEST",
        },
        "channel": null,
      },
    },
  },
  Object {
    "done": false,
    "value": Object {
      "@@redux-saga/IO": true,
      "CALL": Object {
        "args": Array [
          Object {
            "backgroundImages": Array [
              Object {
                "alt": "alternative text",
                "isEnable": true,
                "openInNewTab": true,
                "order": 0,
                "urlImageDesktop": "https://www.leparisien.fr/resizer/CBn4GjacGJ5llevItKUbQYa6zcw=/932x582/arc-anglerfish-eu-central-1-prod-leparisien.s3.amazonaws.com/public/4U4PGCRHAK2F6HLMZCBI4PSDNU.jpg",
                "urlImageMobile": "https://www.leparisien.fr/resizer/CBn4GjacGJ5llevItKUbQYa6zcw=/932x582/arc-anglerfish-eu-central-1-prod-leparisien.s3.amazonaws.com/public/4U4PGCRHAK2F6HLMZCBI4PSDNU.jpg",
                "urlLinkDesktop": "Lien PC",
                "urlLinkMobile": "Lien Mobile",
              },
            ],
            "code": 1,
            "createdAt": "2020-05-13T15:39:07.932Z",
            "engineCode": 1,
            "engineId": undefined,
            "inputFields": Array [
              Object {
                "fieldTypeId": undefined,
                "id": 0,
                "inputFieldLabel": "Placeholder Field 1",
                "isEnable": true,
                "isMandatory": true,
                "label": "Placeholder Field 1",
                "order": 0,
                "parameters": Array [
                  Object {
                    "externalCodeId": 4,
                    "id": 4,
                    "key": "Latitude",
                    "label": "Latitude",
                    "scopeId": 2,
                    "scopeParameterId": 2,
                  },
                ],
                "type": null,
              },
              Object {
                "fieldTypeId": undefined,
                "id": 1,
                "inputFieldLabel": "Placeholder Field 2",
                "isEnable": true,
                "isMandatory": true,
                "label": "Placeholder Field 2",
                "order": 0,
                "parameters": Array [
                  Object {
                    "externalCodeId": 2,
                    "id": 0,
                    "key": "cp",
                    "label": "cp",
                    "scopeId": 1,
                    "scopeParameterId": 1,
                  },
                  Object {
                    "externalCodeId": 4,
                    "id": 1,
                    "key": "commune",
                    "label": "commune",
                    "scopeId": 1,
                    "scopeParameterId": 1,
                  },
                  Object {
                    "externalCodeId": 1,
                    "id": 3,
                    "key": "search",
                    "label": "search",
                    "scopeId": 2,
                    "scopeParameterId": 2,
                  },
                ],
                "type": null,
              },
            ],
            "isEnable": true,
            "logo": Object {
              "alt": "string",
              "isEnable": true,
              "openInNewTab": true,
              "order": 1,
              "urlImageDesktop": "string",
              "urlImageMobile": "string",
              "urlLinkDesktop": "string",
              "urlLinkMobile": "string",
            },
            "marketingText": Object {
              "isEnable": undefined,
              "text": Object {
                "isEnable": true,
                "text": "marketingText",
              },
            },
            "modifiedAt": "2020-05-13T15:39:07.932Z",
            "name": "name",
            "scopes": Array [
              Object {
                "isEnable": true,
                "name": "gamme active avec un param n'est pas lie...",
                "order": 0,
                "scopeId": 1,
              },
              Object {
                "isEnable": true,
                "name": "gamme active valide",
                "order": 0,
                "scopeId": 2,
              },
              Object {
                "isEnable": false,
                "name": "gamme disactive",
                "order": 0,
                "scopeId": 3,
              },
            ],
            "searchText": "searchText",
          },
        ],
        "context": null,
        "fn": [Function],
      },
    },
  },
  Object {
    "done": false,
    "value": Object {
      "@@redux-saga/IO": true,
      "PUT": Object {
        "action": Object {
          "type": "RESET_PENDING_REQUEST",
        },
        "channel": null,
      },
    },
  },
  Object {
    "done": false,
    "value": Object {
      "@@redux-saga/IO": true,
      "PUT": Object {
        "action": Object {
          "error": Object {
            "errorMessage": "Erreur d'enregistrement de moteur de recherche",
          },
          "type": "EDIT_ENGINE_ERROR",
        },
        "channel": null,
      },
    },
  },
  Object {
    "done": true,
    "value": true,
  },
]
`;

exports[`EnginesEdition operations saga saveEngine with null engine 1`] = `
Array [
  Object {
    "done": false,
    "value": Object {
      "@@redux-saga/IO": true,
      "PUT": Object {
        "action": Object {
          "type": "PENDING_REQUEST",
        },
        "channel": null,
      },
    },
  },
  Object {
    "done": true,
    "value": null,
  },
]
`;

exports[`EnginesEdition operations saga saveEngine with success 1`] = `
Array [
  Object {
    "done": false,
    "value": Object {
      "@@redux-saga/IO": true,
      "PUT": Object {
        "action": Object {
          "type": "PENDING_REQUEST",
        },
        "channel": null,
      },
    },
  },
  Object {
    "done": false,
    "value": Object {
      "@@redux-saga/IO": true,
      "CALL": Object {
        "args": Array [
          Object {
            "backgroundImages": Array [
              Object {
                "alt": "alternative text",
                "isEnable": true,
                "openInNewTab": true,
                "order": 0,
                "urlImageDesktop": "https://www.leparisien.fr/resizer/CBn4GjacGJ5llevItKUbQYa6zcw=/932x582/arc-anglerfish-eu-central-1-prod-leparisien.s3.amazonaws.com/public/4U4PGCRHAK2F6HLMZCBI4PSDNU.jpg",
                "urlImageMobile": "https://www.leparisien.fr/resizer/CBn4GjacGJ5llevItKUbQYa6zcw=/932x582/arc-anglerfish-eu-central-1-prod-leparisien.s3.amazonaws.com/public/4U4PGCRHAK2F6HLMZCBI4PSDNU.jpg",
                "urlLinkDesktop": "Lien PC",
                "urlLinkMobile": "Lien Mobile",
              },
            ],
            "code": 1,
            "createdAt": "2020-05-13T15:39:07.932Z",
            "engineCode": 1,
            "engineId": undefined,
            "inputFields": Array [
              Object {
                "fieldTypeId": undefined,
                "id": 0,
                "inputFieldLabel": "Placeholder Field 1",
                "isEnable": true,
                "isMandatory": true,
                "label": "Placeholder Field 1",
                "order": 0,
                "parameters": Array [
                  Object {
                    "externalCodeId": 4,
                    "id": 4,
                    "key": "Latitude",
                    "label": "Latitude",
                    "scopeId": 2,
                    "scopeParameterId": 2,
                  },
                ],
                "type": null,
              },
              Object {
                "fieldTypeId": undefined,
                "id": 1,
                "inputFieldLabel": "Placeholder Field 2",
                "isEnable": true,
                "isMandatory": true,
                "label": "Placeholder Field 2",
                "order": 0,
                "parameters": Array [
                  Object {
                    "externalCodeId": 2,
                    "id": 0,
                    "key": "cp",
                    "label": "cp",
                    "scopeId": 1,
                    "scopeParameterId": 1,
                  },
                  Object {
                    "externalCodeId": 4,
                    "id": 1,
                    "key": "commune",
                    "label": "commune",
                    "scopeId": 1,
                    "scopeParameterId": 1,
                  },
                  Object {
                    "externalCodeId": 1,
                    "id": 3,
                    "key": "search",
                    "label": "search",
                    "scopeId": 2,
                    "scopeParameterId": 2,
                  },
                ],
                "type": null,
              },
            ],
            "isEnable": true,
            "logo": Object {
              "alt": "string",
              "isEnable": true,
              "openInNewTab": true,
              "order": 1,
              "urlImageDesktop": "string",
              "urlImageMobile": "string",
              "urlLinkDesktop": "string",
              "urlLinkMobile": "string",
            },
            "marketingText": Object {
              "isEnable": undefined,
              "text": Object {
                "isEnable": true,
                "text": "marketingText",
              },
            },
            "modifiedAt": "2020-05-13T15:39:07.932Z",
            "name": "name",
            "scopes": Array [
              Object {
                "isEnable": true,
                "name": "gamme active avec un param n'est pas lie...",
                "order": 0,
                "scopeId": 1,
              },
              Object {
                "isEnable": true,
                "name": "gamme active valide",
                "order": 0,
                "scopeId": 2,
              },
              Object {
                "isEnable": false,
                "name": "gamme disactive",
                "order": 0,
                "scopeId": 3,
              },
            ],
            "searchText": "searchText",
          },
        ],
        "context": null,
        "fn": [Function],
      },
    },
  },
  Object {
    "done": false,
    "value": Object {
      "@@redux-saga/IO": true,
      "PUT": Object {
        "action": Object {
          "type": "RESET_PENDING_REQUEST",
        },
        "channel": null,
      },
    },
  },
  Object {
    "done": false,
    "value": Object {
      "@@redux-saga/IO": true,
      "PUT": Object {
        "action": Object {
          "type": "EDIT_ENGINE_SUCCESS",
        },
        "channel": null,
      },
    },
  },
  Object {
    "done": true,
    "value": true,
  },
]
`;
